Oct 28, 2002: Alex <alex_b@users.sourceforge.net>
- Add (...) button to game directory
- Add Guess button to game directory - follows symlinks
- Changed UT2003 default port to 7777
- Changed UT2003 back to -ut2s as the next version of qstat (soon!)
  will support another UT2 query method that works off of gameport+1
  which is the same as the in-game browser in UT2003

Oct 28, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- fix source menu
- update german translation
- print number of servers when changing filters too

Oct 27, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- speed improvements for host and server lists
- fix plural form in reset_main_status_bar

Oct 27, 2002: Alex <alex_b@users.sourceforge.net>
- Bug fix - was able to enter same custom argument twice if case of game
  was different
- Changed UT2003 default port to 7787
- Changed UT2003 back to -gps for qstat, now uses query port from master
  server for server list, pulls hostport from server info when connecting
- Number of servers in status bar now updated when enabling / disabling a
  filter and when finished searching for a player
- Created function reset_main_status_bar

Oct 26, 2002: Alex <alex_b@users.sourceforge.net>
- Set focus to Game Contains when adding new server filter
- Set focus to Game when adding new custom arg
- Added file dialog box (... button) to sound config page

Oct 26, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- cleanup q3_exec:
  - protocol dependant launching no longer requires full path, will search $PATH
  - do not check for valid mod dir for games other than q3a
  - do not check for punkbuster for games other than q3a
  - pass all options as separate arguments
- fix xqf killing itself when exec failed

Oct 25, 2002: Alex <alex_b@users.sourceforge.net>
- Segfault fix - q3_exec - launch game even if it doesn't respond to refresh
- Tooltip updates

Oct 24, 2002: Alex <alex_b@users.sourceforge.net>